--- a/src/apps/Projects/Projects.css
+++ b/src/apps/Projects/Projects.css
@@ -60,7 +60,7 @@
 }
 
 .project-link {
-  color: var(--app-label);
+  color: var(--app-link-hover);
   opacity: 1;
   display: flex;
   align-items: center;
@@ -122,7 +122,7 @@
 }
 
 .project-detail-link {
-  color: var(--app-text);
+  color: var(--app-link-hover);
   text-decoration: none;
   font-size: 14px;
   font-weight: 400;
@@ -136,8 +136,7 @@
 
 .project-detail-icon {
   color: var(--app-text);
-  opacity: 1;
-  transition: color 0.3s ease;
+  opacity: 0;
 }
 
 .project-video {
@@ -174,6 +173,7 @@
 
   .project-detail-link:hover .project-detail-icon {
     color: var(--app-link-hover);
+    opacity: 1;
   }
 }
 
