--- a/src/components/MenuBar/MenuBar.css
+++ b/src/components/MenuBar/MenuBar.css
@@ -32,6 +32,8 @@
   align-items: center;
   padding: 4px;
   border-radius: 4px;
+  position: relative;
+  top: 2px;
 }
 
 .power-button-container-menu {
