--- a/src/components/Desktop/Desktop.css
+++ b/src/components/Desktop/Desktop.css
@@ -1,6 +1,7 @@
 .desktop {
   width: 100%;
   height: 100vh;
+  height: 100dvh;
   padding-top: 30px;
   box-sizing: border-box;
   position: fixed;
@@ -9,6 +10,8 @@
   background-size: cover;
   background-position: center;
   z-index: 0;
+  overflow: hidden;
+  overscroll-behavior: none;
 }
 
 .desktop-icons {
