--- a/src/components/MenuBar/MenuBar.css
+++ b/src/components/MenuBar/MenuBar.css
@@ -36,7 +36,11 @@
   align-items: center;
   padding: 4px;
   border-radius: 4px;
-  opacity: 0.85;
+  opacity: 0.9;
+}
+
+.theme-toggle svg {
+  stroke-width: 2.5;
 }
 
 .power-button-container-menu {
