--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -3,7 +3,7 @@
     src: url("/fonts/Garamond.woff2") format("woff2");
     font-weight: 400;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 .card-shell {
