--- a/app/globals.css
+++ b/app/globals.css
@@ -85,6 +85,7 @@ body {
   max-width: min(88vw, 500px);
   will-change: transform;
   backface-visibility: hidden;
+  cursor: pointer;
 }
 
 .island-photo {
